--- a/githubvis/static/css/style.css
+++ b/githubvis/static/css/style.css
@@ -5906,3 +5906,27 @@ td.visible-print {
     display: none !important;
   }
 }
+html {
+  background: #222222;
+  position: relative;
+}
+html .vis-controls {
+  position: absolute;
+  top: 4px;
+  left: 4px;
+  width: 190px;
+  background: #eeeeee;
+  min-height: 200px;
+  overflow-x: hidden;
+  border-top-right-radius: 3px;
+  border-top-left-radius: 3px;
+  border-bottom-right-radius: 3px;
+  border-bottom-left-radius: 3px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  z-index: 1000;
+  padding: 8px;
+}
+html .vis-controls .row .col-md-12 {
+  margin-bottom: 8px;
+}
