--- a/githubvis/static/less/bootstrap.less
+++ b/githubvis/static/less/bootstrap.less
@@ -59,4 +59,32 @@
 @import "responsive-utilities.less";
 
 
+html {
+	background: @gray-darker;
+	position: relative;
+
+
+	.vis-controls {
+		position: absolute;
+		top:4px;
+		left:4px;
+		width:190px;
+		background: @gray-lighter;
+		min-height:200px;
+		overflow-x: hidden;
+		.border-top-radius(3px);
+		.border-bottom-radius(3px);
+		.box-shadow(inset 0 1px 1px rgba(0,0,0,.05));
+		z-index: 1000;
+		padding:8px;
+		.row {
+			.col-md-12 {
+				margin-bottom:8px;
+			}
+
+		}
+
+	}
+}
+
 
