--- a/githubvis/templates/vis.html
+++ b/githubvis/templates/vis.html
@@ -17,7 +17,26 @@
 {% endblock %}
 
 {% block body %}
+<div class="vis-controls">
+	<div class="row">
+		<div class="col-md-12">
+			<a href="javascript:void(0)" 
+			data-action="toggleFunctions"
+			class="btn btn-small btn-success btn-block toggle-functions">
+				Toggle Function Calls
+			</a>
+		</div>
+		<div class="col-md-12">
+			<a href="javascript:void(0)"
+			 class="btn btn-small btn-primary btn-block toggle-files"
+			  data-action="toggleFiles">
+			  Toggle File Changes
+			</a>
+		</div>
 
+	</div>
+
+</div>
 
 <div id="globe"></div>
 
